# esp32_desktop_assistant

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/inc/: http.h  infoScene.h  input_device.h  inputscene.h  mainscene.h  myWifi.h  my_nvs.h  setupscene.h  sht3x.h  sntp.h  status_routine.h
main/src/back_end/: http.c  input_device.c  myWifi.c  sntp.c  status_routine.c
main/src/bsp/: my_nvs.c  sht3x.c
main/src/gui/: azuki_array.c  infoScene.c  inputscene.c  mainscene.c  setupscene.c
